@@ -38,3 +38,4 @@ Guillaume ROUSSE: various patches for Xen support
 Lucas MASSE: various patches for Solaris support
 Adam BUCHBINDER: various patches 
 Bernhard Denner: various patches
+Yoann Le Bihan: Solaris patches
